<resources>
    <string name="app_name">MechanicalAssistanceApp</string>
    <string name="usuario">Usuario</string>
    <string name="clave">Clave</string>
    <string name="ingresar">Ingresar</string>
    <string name="tipo_usuario">Tipo Usuario</string>
    <string name="tipo_documento">Tipo Documento</string>
    <string name="nroDocumento">Nro Documento</string>
    <string name="registrar">Registrar</string>
    <string name="repetir_clave">Repetir Clave</string>
    <string name="registrarUsuario">Registrar Usuario</string>
    <string name="tagMechanical">Mechanical</string>
    <string name="registrar_emergencia">EMERGENCIA!!!</string>
    <string name="emergencia_pendiente">Emergencia Pendiente</string>
    <string name="editar_usuario">EDITAR USUARIO</string>
    <string name="ver_proveedores">VER PROVEEDORES</string>
    <string name="ver_historial_emergencias">VER HISTORIAL EMERGENCIAS</string>
    <string name="tipo_emergencia">Tipo Emergencia</string>
    <string name="detalle">Detalle</string>
    <string name="nombre">Nombre</string>
    <string name="direcci_n">Dirección</string>
    <string name="distrito">Distrito</string>
    <string name="telefono">Telefono</string>
    <string name="email">Email</string>
    <string name="guardar_modificacion">GUARDAR MODIFICACION</string>

    <string name="keypreference">mechanicalapp</string>
    <string name="marca_auto">Marca Auto</string>
    <string name="modelo_auto">Modelo Auto</string>
    <string name="a_o_auto">Año Auto</string>
    <string name="nombre_razonsocial">Nombre / Razón Social</string>
    <string name="web">Web</string>
    <string name="cliente">Cliente</string>
    <string name="proveedor">Proveedor</string>
    <string name="ver_historial">Ver Historial Emergencias</string>
    <string name="editar_proveedor">Editar Proveedor</string>
    <string name="emergencia_asignada">EMERGENCIA ASIGNADA</string>
    <string name="emergencias_x_cotizar">EMERGENCIAS X COTIZAR</string>
    <string name="fecha_registro">Fecha Registro</string>
    <string name="postular">POSTULAR</string>
    <string name="puntuacion">Puntuación</string>
    <string name="distancia">Distancia</string>
    <string name="title_activity_emergency_maps">Map</string>
    <string name="finalizar_emergencia">Finalizar Emergencia</string>
    <string name="finalizar">Finalizar</string>
    <string name="nombres_raz_n_social">Nombres / Razón Social</string>
    <string name="calificaci_n">Calificación</string>
    <string name="observaci_n_adicional">Observación Adicional</string>
    <string name="agregar_a_favoritos">Agregar a Favoritos</string>
    <string name="fecha_atenci_n">Fecha Atención</string>
    <string name="cerrar_sesion">Cerrar Sesion</string>

</resources>
