<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/padding15dp"
    tools:context=".activities.RegisterUserActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="@dimen/width120dp"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/tipo_usuario"/>

            <Spinner
                android:id="@+id/cboTipoUsuario_RegisterUser"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"></Spinner>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/marginTop15dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="@dimen/width120dp"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/tipo_documento"/>

            <Spinner
                android:id="@+id/cboTipoDocumento_RegisterUser"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"></Spinner>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/marginTop15dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="@dimen/width120dp"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/nroDocumento"/>

            <EditText
                android:id="@+id/txtNroDocumento_RegisterUser"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"></EditText>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/marginTop20dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="@dimen/width120dp"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/usuario"/>

            <EditText
                android:id="@+id/txtUsuario_RegisterUser"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"></EditText>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/marginTop20dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="@dimen/width120dp"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/clave"/>

            <EditText
                android:id="@+id/txtClave_RegisterUser"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"></EditText>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/marginTop20dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="@dimen/width120dp"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/repetir_clave"/>

            <EditText
                android:id="@+id/txtClaveRepetir_RegisterUser"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"></EditText>
        </LinearLayout>


        <Button
            android:id="@+id/btnRegistrar_RegisterUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/marginTop20dp"
            android:text="@string/registrar"/>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>