<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/padding15dp"
    tools:context=".activities.EmergencyPendingActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="@dimen/width120dp"
                android:layout_height="wrap_content"
                android:text="@string/tipo_emergencia"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/lblTipoEmergencia"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/marginTop15dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="@dimen/width120dp"
                android:layout_height="wrap_content"
                android:text="@string/detalle"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/lblDetalle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/marginTop15dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="@dimen/width120dp"
                android:layout_height="wrap_content"
                android:text="@string/fecha_registro"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/lblFechaRegistro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/marginTop15dp"
            android:background="#d7d7d7"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Proveedores Postulando"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/btnRefrescar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_refresh_black_24dp" />
        </LinearLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rvProveedores"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>